fixed layout sidebar shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -187,3 +187,9 @@ html {
 
 
 
+.sidebar-open .content-container {
+    margin-left: 300px ; 
+}
+.sidebar-closed .content-container {
+    margin-left: 80px ; 
+}
